--- a/examples/standard.htm
+++ b/examples/standard.htm
@@ -3,7 +3,7 @@
 <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <!-- Include the GhostEdit stylesheet - contains things such as toolbar and other UI element layout styles -->
-        <link rel='stylesheet' media='screen' href='../dist/ghostedit-1.0rc1.css' />
+        <link rel='stylesheet' media='screen' href='../dist/ghostedit-1.0pre.css' />
         <!-- IE 8 bug fix -->
         <!--[if IE gte 8]>
         <style type='text/css'>.ghostedit_rootnode [data-elemtype=textblock]:after {content: "\200b";}</style>
@@ -34,7 +34,7 @@
 
 
 <!-- Include scripts: the lasso selection library, the main ghostedit file, and the plugin files -->
-<script src='../dist/ghostedit-1.0rc1.js' type='text/javascript'></script>
+<script src='../dist/ghostedit-1.0pre.js' type='text/javascript'></script>
 
 <script type='text/javascript'>	
 	// ghostedit.init function is passed the id of the div containing the starting content and the options object.
